# chatio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chatutil.py  debugger.py  entrypoint.sh  loopchat.py  machiner.py  makefile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  setupenv.sh  streamer.py  tokencnt.py  visioner.py
chatio/: ui.py
chatio/api/: _common.py  openai.py
chatutil/: api.py  ui.py
claudesy/: api.py  ui.py
claudesy/api/: __init__.py  claude.py  default.py  openai.py
lints/: run.sh
scripts/: loopback.py  machiner.py  tokencnt.py  visioner.py
share/vendors/: anthropic.toml  chatgpt.toml  claude.toml  deepseek.toml  ds.toml  gemini.toml  google.toml  grokai.toml  hailuo.toml  kimi.toml  meta.toml  mistral.toml  moonshot.toml  novita.toml  openai.toml  openrouter.toml  perplexity.toml  pplx.toml  qwenai.toml  qwq.toml  router.toml  together.toml  xai.toml  xiaomi.toml  zai.toml
share/vendors/compat/: google.toml  hailuo.toml  mistral.toml  perplexity.toml  pplx.toml  zai.toml
src/chatio/: cli.py
src/chatio/api/: __init__.py  _common.py  _events.py  _utils.py  claude.py  google.py  openai.py
src/chatio/chat/: __init__.py  model.py  reply.py  state.py  stats.py  tools.py  usage.py
src/chatio/cli/: __init__.py  debugger.py  input.py  loop.py  loopback.py  main.py  pipe.py  stdio.py  style.py  tcnt.py  test.py
src/chatio/core/: __init__.py  (+14 more)
src/toolbelt/: __init__.py  dummy.py  image.py  llm.py  shell.py  web.py  wiki.py
toolbelt/: dummy.py  image.py  shell.py  wiki.py
(+81 files in other folders)
