[metadata]
name = chatio
version = attr: chatio.__version__
author = Roman Valov
author_email = roman.valov@gmail.com
description = ultra-lightweight llm streaming swiss-knife
url = https://github.com/chatio-ai/chatio
license =
classifiers =

[options]
install_requires = file: requirements.txt
include_package_data = true
package_dir =
    = src

[options.extras_require]
dev = file: requirements.dev.txt

[options.package_data]
chatio =
    share/vendors/**/*.toml

[options.entry_points]
console_scripts =
    chatio = chatio.cli.main:main
    chatio-tcnt = chatio.cli.tcnt:main
    chatio-loop = chatio.cli.loop:main
    chatio-pipe = chatio.cli.pipe:main
    chatio-test = chatio.cli.test:main
